--- a/angular.json
+++ b/angular.json
@@ -63,13 +63,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "10Mb",
+                  "maximumError": "10Mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "8kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "10Mb",
+                  "maximumError": "10Mb"
                 }
               ],
               "outputHashing": "all"
